# SandboxToyProjects

./: .gitignore  .gitmodules  LICENSE-MIT  README.md
Nbody/: COMPARISON.md
Nbody/simulation/: Cargo.toml  build_err.txt
Nbody/simulation/benches/: sim_bench.rs
Nbody/simulation/src/: body.rs  c_api.rs  lib.rs  quadtree.rs  simulation.rs  utils.rs
Nbody/viewer/: build.zig  build_errors.txt  build_errors_2.txt  build_errors_3.txt  build_log.txt
Odin/: DESIGN.md  README.md  build.bat  design_review.md  run.bat  run_sim.bat
Odin/client_sim/: main.cpp  test_simulation.zig
Odin/game/: game_protocol.odin  main.odin  shared_memory_test.odin  types.odin
Odin/ipc/: commands.odin  hybrid_transport.odin  ipc_transport.odin  protocol.odin  tcp_transport.odin  transport.odin  udp_transport.odin
Odin/openspec/: project.md
Odin/schemas/: GameState.fbs  samples.cpp
Odin/session/: sync.odin  sync_authoritative.odin  sync_lockstep.odin  sync_turnbased.odin
Odin/simulation/: tick.odin
Odin/tools/: build_schemas.py  manage.ps1
VulkanCompute/: build.zig  compute.hlsl  main.zig  sand_sim.hlsl  triangle.hlsl  vulkan_compute.zig  vulkan_window.zig
VulkanCompute/radiance_cascades_2d/: CompositionalLayers.md  README.md  accumulate.hlsl  build.zig  build_errors.txt  build_out.txt  cascade.hlsl  cascade_brute.hlsl  display.hlsl  imgui.ini  imgui_backend.zig  jfa.hlsl  jfa_init.hlsl  jfa_jump.hlsl  main.zig  main_brute.zig  output.txt  test_arraylist.zig
WindSim/: README.md  aabbtree.hpp  build.zig  build_release.bat  main.cpp  windsim.hpp
docs/: sandfall.webm
(+72 files in other folders)
