[package]
name = "nbody-simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
broccoli = "6.3.0"
fastrand = "2.3.0"
ultraviolet = "0.10.0"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sim_bench"
harness = false

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
