[package]
name = "nbody-simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
broccoli = "6.3.0"
fastrand = "2.3.0"
rayon = "1.11.0"
rustfiber = { git = "https://github.com/josephkirk/RustFiber", version = "0.1.3" }
ultraviolet = "0.10.0"


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "sim_bench"
harness = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
target-cpu = "native"